# RefTrace

./: .cursorignore  .gitignore  CONTRIBUTING.md  Makefile  PYTHON.md  README.md  checks.go  go.mod  go.sum  lint_cmd.go  main.go  nfcore_lint_cmd.go  pyproject.toml  release.sh
.github/workflows/: build.yml  debug_version.yml
cmd/: generate_parser.go
demo/: nfcore_lint.tape
docs/: conf.py  index.html  index.rst  reftrace.html  reftrace.md  search.js
docs/source/: conf.py  index.rst
example_linting_rules/: check_input_output.py  example_process.nf  example_process2.nf  has_label_or_cpus.py  min_max_cpus.py
lexer/: GroovyParser.g4  generate.go  generate.sh  groovy_lexer_ext.go  groovy_parser_ext.go  lexer_test.go  parser_test.go  preloaded_token_stream.go
nf/: base_visitor.go  channel.go  delegation_metadata.go  dummy_visitor.go  include_visitor.go  include_visitor_test.go  lint.go  lint_test.go  module_builder.go  nf_test.go  param_visitor.go  process_body_test.go  process_body_visitor.go  process_starlark.go  process_visitor.go  receiver.go  union_type_class_node.go  util.go  workflow_body_visitor.go  workflow_visitor.go
nf/configlint/: lint_test.go  param_visitor.go  visitors.go
nf/corelint/: container.go  container_test.go  lint.go  lint_test.go  process_label.go  process_label_test.go  process_labels.go
nf/directives/: accelerator.go  afterscript.go  arch.go  array.go  beforescript.go  cache.go  clusteroptions.go  conda.go  container.go  containeroptions.go  cpus.go  debug.go  disk.go  echo.go  errorstrategy.go  executor.go  ext.go  fair.go  label.go  machinetype.go  maxerrors.go  maxforks.go  maxretries.go  maxsubmitawait.go  memory.go  module.go  penv.go  pod.go  publishdir.go  queue.go  resourcelabels.go  resourcelimits.go  scratch.go  shell.go  spack.go  stageinmode.go  stageoutmode.go  storedir.go  tag.go  time.go  (+1 more)
nf/inputs/: each.go  env.go  file.go  path.go  stdin.go  tuple.go  util.go  val.go
nf/outputs/: env.go  eval.go  file.go  path.go  stdout.go  tuple.go  util.go  val.go
parser/: GroovyLexer.g4  GroovyLexer.interp  GroovyLexer.tokens  GroovyParser.g4  annotated_node.go  annotation_constant_expression.go  annotation_node.go  argument_list_expression.go  array_expression.go  assert_statement.go  ast_builder.go  ast_builder_visit_path_element.go  ast_node.go  ast_to_text_helper.go  attribute_expression.go  binary_expression.go  bitwise_negation_expression.go  block_statement.go  boolean_expression.go  break_statement.go  case_statement.go  cast_expression.go  catch_statement.go  class_expression.go  class_helper.go  class_node.go  closure_expression.go  closure_list_expression.go  code_visitor_support.go  compile_unit.go  constant_expression.go  constructor_call_expression.go  constructor_node.go  continue_statement.go  custom_error_strategy.go  declaration_expression.go  declaration_statement.go  do_while_statement.go  dynamic_variable.go  elvis_operator_expression.go  (+88 more)
parser/ast/: annotated_node.go  (+6 more)
proto/: common.proto  config_file.proto  module.proto
python/: README.md  pyproject.toml  setup.py
python/reftrace/: __init__.py  app.py  container.py  lib.py  module.py  process.py
python/reftrace/bindings/: config_file.py  container.py  label.py  lib.py  module.py  process.py
python/reftrace/cli/: graph.py  info.py  main.py
python/reftrace/directives/: __init__.py  accelerator.py  afterscript.py  arch.py  array.py  beforescript.py  cache.py  clusteroptions.py  conda.py  container.py  containeroptions.py  cpus.py  debug.py  disk.py  dynamic.py  echo.py  errorstrategy.py  executor.py  ext.py  fair.py  label.py  machinetype.py  maxerrors.py  maxforks.py  maxretries.py  maxsubmitawait.py  memory.py  module.py  penv.py  pod.py  publishdir.py  queue.py  resourcelabels.py  resourcelimits.py  scratch.py  shell.py  spack.py  stageinmode.py  stageoutmode.py  storedir.py  (+3 more)
python/reftrace/fixtures/: rules.py
python/reftrace/linting/: __init__.py
python/tests/: test_module.py
python/tests/bindings/: test_config_file.py  test_module.py
python/tests/cli/: test_containers.py  test_graph.py  test_info.py  test_labels.py
python/tests/fixtures/: rules.py
python/tests/utils/: __init__.py
reftrace/: __init__.py  container.go  handles.go  module.go  process.go
scripts/: setup_deps.py  transform_docs.py
(+14 files in other folders)
