[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "reftrace"
dynamic = ["version"]
description = "Lint Nextflow pipelines in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Stiles", email = "andrew@reftrace.com"},
]
dependencies = [
    "click>=8.0.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "protobuf>=5.29.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools_scm]
write_to = "python/reftrace/_version.py"

[project.scripts]
reftrace = "reftrace.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "python"}
packages = [
    "reftrace",
    "reftrace.bindings",
    "reftrace.cli",
    "reftrace.linting",
    "reftrace.fixtures",
    "reftrace.proto",
    "reftrace.graph"
]
package-data = { "reftrace.bindings" = ["*.so", "*.dylib", "*.dll"], "reftrace.fixtures" = ["rules.py"] }

[tool.cibuildwheel]
build-frontend = "build"
build = ["cp39-*", "cp3*-*"]
skip = ["*musllinux*"]
test-requires = "pytest"
test-command = "pytest {project}/python/tests"
dependency-versions = "latest"

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
python_files = ["test_*.py"]
