[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reftrace"
version = "0.4.0"
description = "Code analysis for bioinformatics pipelines"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Stiles", email = "andrew@reftrace.com"},
]
dependencies = [
    "click>=8.0.0"
]

[project.scripts]
reftrace = "reftrace.cli.main:cli"

[tool.setuptools]
packages = ["reftrace", "reftrace.bindings", "reftrace.cli"]

[tool.setuptools.package-data]
reftrace = ["bindings/libreftrace.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]