[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reftrace"
version = "0.4.0"
description = "Code analysis for bioinformatics pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Stiles", email = "andrew@reftrace.com"},
]
dependencies = [
    "click>=8.0.0"
]

[project.scripts]
reftrace = "reftrace.cli.main:cli"

[tool.setuptools]
packages = ["reftrace", "reftrace.bindings", "reftrace.cli", "reftrace.linting", "tests", "tests.fixtures"]
package-data = { "reftrace.bindings" = ["*.so", "*.dylib", "*.dll"], "tests.fixtures" = ["rules.py"] }

[tool.cibuildwheel]
build-frontend = "build"
build = ["cp39-*", "cp3*-*"]
skip = ["*musllinux*"]
test-requires = "pytest"
test-command = "pytest {package}/tests"
dependency-versions = "latest"

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0.1" }

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
